test/libsolidity/syntaxTests/more_than_256_declarationerrors.sol
contract C {
  function f() {
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
  }
}
// ----
// DeclarationError: (34-35): Undeclared identifier.
// DeclarationError: (45-46): Undeclared identifier.
// DeclarationError: (56-57): Undeclared identifier.
// DeclarationError: (67-68): Undeclared identifier.
// DeclarationError: (78-79): Undeclared identifier.
// DeclarationError: (89-90): Undeclared identifier.
// DeclarationError: (100-101): Undeclared identifier.
// DeclarationError: (111-112): Undeclared identifier.
// DeclarationError: (122-123): Undeclared identifier.
// DeclarationError: (133-134): Undeclared identifier.
// DeclarationError: (144-145): Undeclared identifier.
// DeclarationError: (155-156): Undeclared identifier.
// DeclarationError: (166-167): Undeclared identifier.
// DeclarationError: (177-178): Undeclared identifier.
// DeclarationError: (188-189): Undeclared identifier.
// DeclarationError: (199-200): Undeclared identifier.
// DeclarationError: (210-211): Undeclared identifier.
// DeclarationError: (221-222): Undeclared identifier.
// DeclarationError: (232-233): Undeclared identifier.
// DeclarationError: (243-244): Undeclared identifier.
// DeclarationError: (254-255): Undeclared identifier.
// DeclarationError: (265-266): Undeclared identifier.
// DeclarationError: (276-277): Undeclared identifier.
// DeclarationError: (287-288): Undeclared identifier.
// DeclarationError: (298-299): Undeclared identifier.
// DeclarationError: (309-310): Undeclared identifier.
// DeclarationError: (320-321): Undeclared identifier.
// DeclarationError: (331-332): Undeclared identifier.
// DeclarationError: (342-343): Undeclared identifier.
// DeclarationError: (353-354): Undeclared identifier.
// DeclarationError: (364-365): Undeclared identifier.
// DeclarationError: (375-376): Undeclared identifier.
// DeclarationError: (386-387): Undeclared identifier.
// DeclarationError: (397-398): Undeclared identifier.
// DeclarationError: (408-409): Undeclared identifier.
// DeclarationError: (419-420): Undeclared identifier.
// DeclarationError: (430-431): Undeclared identifier.
// DeclarationError: (441-442): Undeclared identifier.
// DeclarationError: (452-453): Undeclared identifier.
// DeclarationError: (463-464): Undeclared identifier.
// DeclarationError: (474-475): Undeclared identifier.
// DeclarationError: (485-486): Undeclared identifier.
// DeclarationError: (496-497): Undeclared identifier.
// DeclarationError: (507-508): Undeclared identifier.
// DeclarationError: (518-519): Undeclared identifier.
// DeclarationError: (529-530): Undeclared identifier.
// DeclarationError: (540-541): Undeclared identifier.
// DeclarationError: (551-552): Undeclared identifier.
// DeclarationError: (562-563): Undeclared identifier.
// DeclarationError: (573-574): Undeclared identifier.
// DeclarationError: (584-585): Undeclared identifier.
// DeclarationError: (595-596): Undeclared identifier.
// DeclarationError: (606-607): Undeclared identifier.
// DeclarationError: (617-618): Undeclared identifier.
// DeclarationError: (628-629): Undeclared identifier.
// DeclarationError: (639-640): Undeclared identifier.
// DeclarationError: (650-651): Undeclared identifier.
// DeclarationError: (661-662): Undeclared identifier.
// DeclarationError: (672-673): Undeclared identifier.
// DeclarationError: (683-684): Undeclared identifier.
// DeclarationError: (694-695): Undeclared identifier.
// DeclarationError: (705-706): Undeclared identifier.
// DeclarationError: (716-717): Undeclared identifier.
// DeclarationError: (727-728): Undeclared identifier.
// DeclarationError: (738-739): Undeclared identifier.
// DeclarationError: (749-750): Undeclared identifier.
// DeclarationError: (760-761): Undeclared identifier.
// DeclarationError: (771-772): Undeclared identifier.
// DeclarationError: (782-783): Undeclared identifier.
// DeclarationError: (793-794): Undeclared identifier.
// DeclarationError: (804-805): Undeclared identifier.
// DeclarationError: (815-816): Undeclared identifier.
// DeclarationError: (826-827): Undeclared identifier.
// DeclarationError: (837-838): Undeclared identifier.
// DeclarationError: (848-849): Undeclared identifier.
// DeclarationError: (859-860): Undeclared identifier.
// DeclarationError: (870-871): Undeclared identifier.
// DeclarationError: (881-882): Undeclared identifier.
// DeclarationError: (892-893): Undeclared identifier.
// DeclarationError: (903-904): Undeclared identifier.
// DeclarationError: (914-915): Undeclared identifier.
// DeclarationError: (925-926): Undeclared identifier.
// DeclarationError: (936-937): Undeclared identifier.
// DeclarationError: (947-948): Undeclared identifier.
// DeclarationError: (958-959): Undeclared identifier.
// DeclarationError: (969-970): Undeclared identifier.
// DeclarationError: (980-981): Undeclared identifier.
// DeclarationError: (991-992): Undeclared identifier.
// DeclarationError: (1002-1003): Undeclared identifier.
// DeclarationError: (1013-1014): Undeclared identifier.
// DeclarationError: (1024-1025): Undeclared identifier.
// DeclarationError: (1035-1036): Undeclared identifier.
// DeclarationError: (1046-1047): Undeclared identifier.
// DeclarationError: (1057-1058): Undeclared identifier.
// DeclarationError: (1068-1069): Undeclared identifier.
// DeclarationError: (1079-1080): Undeclared identifier.
// DeclarationError: (1090-1091): Undeclared identifier.
// DeclarationError: (1101-1102): Undeclared identifier.
// DeclarationError: (1112-1113): Undeclared identifier.
// DeclarationError: (1123-1124): Undeclared identifier.
// DeclarationError: (1134-1135): Undeclared identifier.
// DeclarationError: (1145-1146): Undeclared identifier.
// DeclarationError: (1156-1157): Undeclared identifier.
// DeclarationError: (1167-1168): Undeclared identifier.
// DeclarationError: (1178-1179): Undeclared identifier.
// DeclarationError: (1189-1190): Undeclared identifier.
// DeclarationError: (1200-1201): Undeclared identifier.
// DeclarationError: (1211-1212): Undeclared identifier.
// DeclarationError: (1222-1223): Undeclared identifier.
// DeclarationError: (1233-1234): Undeclared identifier.
// DeclarationError: (1244-1245): Undeclared identifier.
// DeclarationError: (1255-1256): Undeclared identifier.
// DeclarationError: (1266-1267): Undeclared identifier.
// DeclarationError: (1277-1278): Undeclared identifier.
// DeclarationError: (1288-1289): Undeclared identifier.
// DeclarationError: (1299-1300): Undeclared identifier.
// DeclarationError: (1310-1311): Undeclared identifier.
// DeclarationError: (1321-1322): Undeclared identifier.
// DeclarationError: (1332-1333): Undeclared identifier.
// DeclarationError: (1343-1344): Undeclared identifier.
// DeclarationError: (1354-1355): Undeclared identifier.
// DeclarationError: (1365-1366): Undeclared identifier.
// DeclarationError: (1376-1377): Undeclared identifier.
// DeclarationError: (1387-1388): Undeclared identifier.
// DeclarationError: (1398-1399): Undeclared identifier.
// DeclarationError: (1409-1410): Undeclared identifier.
// DeclarationError: (1420-1421): Undeclared identifier.
// DeclarationError: (1431-1432): Undeclared identifier.
// DeclarationError: (1442-1443): Undeclared identifier.
// DeclarationError: (1453-1454): Undeclared identifier.
// DeclarationError: (1464-1465): Undeclared identifier.
// DeclarationError: (1475-1476): Undeclared identifier.
// DeclarationError: (1486-1487): Undeclared identifier.
// DeclarationError: (1497-1498): Undeclared identifier.
// DeclarationError: (1508-1509): Undeclared identifier.
// DeclarationError: (1519-1520): Undeclared identifier.
// DeclarationError: (1530-1531): Undeclared identifier.
// DeclarationError: (1541-1542): Undeclared identifier.
// DeclarationError: (1552-1553): Undeclared identifier.
// DeclarationError: (1563-1564): Undeclared identifier.
// DeclarationError: (1574-1575): Undeclared identifier.
// DeclarationError: (1585-1586): Undeclared identifier.
// DeclarationError: (1596-1597): Undeclared identifier.
// DeclarationError: (1607-1608): Undeclared identifier.
// DeclarationError: (1618-1619): Undeclared identifier.
// DeclarationError: (1629-1630): Undeclared identifier.
// DeclarationError: (1640-1641): Undeclared identifier.
// DeclarationError: (1651-1652): Undeclared identifier.
// DeclarationError: (1662-1663): Undeclared identifier.
// DeclarationError: (1673-1674): Undeclared identifier.
// DeclarationError: (1684-1685): Undeclared identifier.
// DeclarationError: (1695-1696): Undeclared identifier.
// DeclarationError: (1706-1707): Undeclared identifier.
// DeclarationError: (1717-1718): Undeclared identifier.
// DeclarationError: (1728-1729): Undeclared identifier.
// DeclarationError: (1739-1740): Undeclared identifier.
// DeclarationError: (1750-1751): Undeclared identifier.
// DeclarationError: (1761-1762): Undeclared identifier.
// DeclarationError: (1772-1773): Undeclared identifier.
// DeclarationError: (1783-1784): Undeclared identifier.
// DeclarationError: (1794-1795): Undeclared identifier.
// DeclarationError: (1805-1806): Undeclared identifier.
// DeclarationError: (1816-1817): Undeclared identifier.
// DeclarationError: (1827-1828): Undeclared identifier.
// DeclarationError: (1838-1839): Undeclared identifier.
// DeclarationError: (1849-1850): Undeclared identifier.
// DeclarationError: (1860-1861): Undeclared identifier.
// DeclarationError: (1871-1872): Undeclared identifier.
// DeclarationError: (1882-1883): Undeclared identifier.
// DeclarationError: (1893-1894): Undeclared identifier.
// DeclarationError: (1904-1905): Undeclared identifier.
// DeclarationError: (1915-1916): Undeclared identifier.
// DeclarationError: (1926-1927): Undeclared identifier.
// DeclarationError: (1937-1938): Undeclared identifier.
// DeclarationError: (1948-1949): Undeclared identifier.
// DeclarationError: (1959-1960): Undeclared identifier.
// DeclarationError: (1970-1971): Undeclared identifier.
// DeclarationError: (1981-1982): Undeclared identifier.
// DeclarationError: (1992-1993): Undeclared identifier.
// DeclarationError: (2003-2004): Undeclared identifier.
// DeclarationError: (2014-2015): Undeclared identifier.
// DeclarationError: (2025-2026): Undeclared identifier.
// DeclarationError: (2036-2037): Undeclared identifier.
// DeclarationError: (2047-2048): Undeclared identifier.
// DeclarationError: (2058-2059): Undeclared identifier.
// DeclarationError: (2069-2070): Undeclared identifier.
// DeclarationError: (2080-2081): Undeclared identifier.
// DeclarationError: (2091-2092): Undeclared identifier.
// DeclarationError: (2102-2103): Undeclared identifier.
// DeclarationError: (2113-2114): Undeclared identifier.
// DeclarationError: (2124-2125): Undeclared identifier.
// DeclarationError: (2135-2136): Undeclared identifier.
// DeclarationError: (2146-2147): Undeclared identifier.
// DeclarationError: (2157-2158): Undeclared identifier.
// DeclarationError: (2168-2169): Undeclared identifier.
// DeclarationError: (2179-2180): Undeclared identifier.
// DeclarationError: (2190-2191): Undeclared identifier.
// DeclarationError: (2201-2202): Undeclared identifier.
// DeclarationError: (2212-2213): Undeclared identifier.
// DeclarationError: (2223-2224): Undeclared identifier.
// DeclarationError: (2234-2235): Undeclared identifier.
// DeclarationError: (2245-2246): Undeclared identifier.
// DeclarationError: (2256-2257): Undeclared identifier.
// DeclarationError: (2267-2268): Undeclared identifier.
// DeclarationError: (2278-2279): Undeclared identifier.
// DeclarationError: (2289-2290): Undeclared identifier.
// DeclarationError: (2300-2301): Undeclared identifier.
// DeclarationError: (2311-2312): Undeclared identifier.
// DeclarationError: (2322-2323): Undeclared identifier.
// DeclarationError: (2333-2334): Undeclared identifier.
// DeclarationError: (2344-2345): Undeclared identifier.
// DeclarationError: (2355-2356): Undeclared identifier.
// DeclarationError: (2366-2367): Undeclared identifier.
// DeclarationError: (2377-2378): Undeclared identifier.
// DeclarationError: (2388-2389): Undeclared identifier.
// DeclarationError: (2399-2400): Undeclared identifier.
// DeclarationError: (2410-2411): Undeclared identifier.
// DeclarationError: (2421-2422): Undeclared identifier.
// DeclarationError: (2432-2433): Undeclared identifier.
// DeclarationError: (2443-2444): Undeclared identifier.
// DeclarationError: (2454-2455): Undeclared identifier.
// DeclarationError: (2465-2466): Undeclared identifier.
// DeclarationError: (2476-2477): Undeclared identifier.
// DeclarationError: (2487-2488): Undeclared identifier.
// DeclarationError: (2498-2499): Undeclared identifier.
// DeclarationError: (2509-2510): Undeclared identifier.
// DeclarationError: (2520-2521): Undeclared identifier.
// DeclarationError: (2531-2532): Undeclared identifier.
// DeclarationError: (2542-2543): Undeclared identifier.
// DeclarationError: (2553-2554): Undeclared identifier.
// DeclarationError: (2564-2565): Undeclared identifier.
// DeclarationError: (2575-2576): Undeclared identifier.
// DeclarationError: (2586-2587): Undeclared identifier.
// DeclarationError: (2597-2598): Undeclared identifier.
// DeclarationError: (2608-2609): Undeclared identifier.
// DeclarationError: (2619-2620): Undeclared identifier.
// DeclarationError: (2630-2631): Undeclared identifier.
// DeclarationError: (2641-2642): Undeclared identifier.
// DeclarationError: (2652-2653): Undeclared identifier.
// DeclarationError: (2663-2664): Undeclared identifier.
// DeclarationError: (2674-2675): Undeclared identifier.
// DeclarationError: (2685-2686): Undeclared identifier.
// DeclarationError: (2696-2697): Undeclared identifier.
// DeclarationError: (2707-2708): Undeclared identifier.
// DeclarationError: (2718-2719): Undeclared identifier.
// DeclarationError: (2729-2730): Undeclared identifier.
// DeclarationError: (2740-2741): Undeclared identifier.
// DeclarationError: (2751-2752): Undeclared identifier.
// DeclarationError: (2762-2763): Undeclared identifier.
// DeclarationError: (2773-2774): Undeclared identifier.
// DeclarationError: (2784-2785): Undeclared identifier.
// DeclarationError: (2795-2796): Undeclared identifier.
// DeclarationError: (2806-2807): Undeclared identifier.
// DeclarationError: (2817-2818): Undeclared identifier.
// DeclarationError: (2828-2829): Undeclared identifier.
// DeclarationError: (2839-2840): Undeclared identifier.
// Warning: There are more than 256 errors. Aborting.
